--- a/apps/astro-app/src/content/articles/2025-07-24-update-2.md
+++ b/apps/astro-app/src/content/articles/2025-07-24-update-2.md
@@ -13,7 +13,7 @@ I've been hard at work testing Ridi routes, listening to your feedback and makin
 
 ## Here's what's new
 
-Here is a bullet point list of improvements and fixes and a more detailed explanation down below in case you are interested in the details.
+Checkout the bullet point list of improvements and fixes and a more detailed explanation down below in case you are interested in the details.
 
 ### Features
 
@@ -21,7 +21,7 @@ Here is a bullet point list of improvements and fixes and a more detailed explan
 - **No-go areas**. Military areas are now identified and marked as _no-go_ and the router now avoid those
 - **Score calculation**. The score calculation now takes chosen rule set into consideration to better reflect the rider's preferences
 - **Motorways rules**. New rule introduced to avoid riding a certain strip of motorway in both directions
-- **Round trip improvements**. The algorithm for finding round trips now finds less confusing routes and offer more options
+- **Round trip improvements**. The algorithm for finding round trips now finds less confusing routes and offers more options
 
 ### Fixes
 
@@ -40,7 +40,7 @@ This approach identifies larger towns and cities, but ignores tiny villages and 
 Here is a visual representation of the classified roads of the [Brandenburg](https://www.openstreetmap.org/#map=9/52.410/13.105)
 ![Brandenburg area](./2025-07-24-update-2-berlin-area.png)
 
-And a smaller town [Baruth](https://www.openstreetmap.org/#map=14/52.03446/13.49855)
+And a smaller town [Baruth](https://www.openstreetmap.org/#map=14/52.03446/13.49855) where an even smaller town (Kemlitz) is not marked in red (residential) as it's too small
 ![Baruth area](./2025-07-24-update-2-baruth-mark.png)
 
 The router now tries to avoid there residential-adjacent roads while creating a route but if they are unavoidable, the router will not attempt to find "fun" roads but try to exit the residential area as quickly as possible.
