--- a/apps/astro-app/src/content/articles/2025-07-24-update-2.md
+++ b/apps/astro-app/src/content/articles/2025-07-24-update-2.md
@@ -90,7 +90,11 @@ So for the next bit I will be focusing on the App, improving the App speed and s
 
 ## Wrap up
 
-It's been really fun to work on these improvements and go riding to test the new routes and iterate! And it's also been really fun chatting with riders and hearing feedback and suggestions! Keep them coming! You can reach me on the [Ridi subreddit](https://www.reddit.com/r/ridiapp) or on [BlueSky](https://bsky.app/profile/tomsjansons.bsky.social)
+It's been really fun to work on these improvements and go riding to test the new routes and iterate! And it's also been really fun chatting with riders and hearing feedback and suggestions! Keep them coming!
+
+I've set up a [Subreddit](https://www.reddit.com/r/ridiapp/) for getting your feedback and chatting, come and share your experience with [Ridi](https://ridi.bike?utm_source=email&utm_medium=newsletter&utm_campaign=update_2_2025&utm_content=git_cta), good or bad!
+
+You can also reach me on [BlueSky](https://bsky.app/profile/tomsjansons.bsky.social), I love to hear feedback and ideas and suggestions!
 
 Have a safe one!
 
