--- a/apps/astro-app/src/content/articles/2025-07-24-update-2.md
+++ b/apps/astro-app/src/content/articles/2025-07-24-update-2.md
@@ -13,8 +13,6 @@ I've been hard at work testing Ridi routes, listening to your feedback and makin
 
 ## Here's what's new
 
-Checkout the bullet point list of improvements and fixes and a more detailed explanation down below in case you are interested in the details.
-
 ### Features
 
 - **Residential areas**. The router now analyses the map data and identifies and prioritises roads that are not close to residential areas
@@ -27,7 +25,7 @@ Checkout the bullet point list of improvements and fixes and a more detailed exp
 
 - **Destination traffic only** roads are now avoided. Destination traffic is often marked with signage like [this](https://berniem.csdd.lv/content/images/berni/302.jpg)
   or [this](https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/CA-BC_road_sign_R-012-T.svg/800px-CA-BC_road_sign_R-012-T.svg.png). OSM data tag info can be found [here](https://wiki.openstreetmap.org/wiki/Tag:access%3Ddestination)
-- **Round trip** now never uses the same roads twice. Previously the router would often use the same road multiple times in both directions leading to confusing routes
+- **Round trip** now never uses the same roads twice. Previously the router would sometimes use the same road multiple times in both directions leading to confusing routes
 
 ## Detailed info
 
@@ -37,13 +35,13 @@ The router now analyses every road and checks how many residential buildings the
 
 This approach identifies larger towns and cities, but ignores tiny villages and isolated dwellings. It also de-prioritizes roads that might not be technically within city limits but realistically are too close to residential areas for safe and fun riding.
 
-Here is a visual representation of the classified roads of the [Brandenburg](https://www.openstreetmap.org/#map=9/52.410/13.105)
+Here is a visual representation of the classified roads of the [Brandenburg](https://www.openstreetmap.org/#map=9/52.410/13.105) (red is close to residential, blue is not)
 ![Brandenburg area](./2025-07-24-update-2-berlin-area.png)
 
 And a smaller town [Baruth](https://www.openstreetmap.org/#map=14/52.03446/13.49855) where an even smaller town (Kemlitz) is not marked in red (residential) as it's too small
 ![Baruth area](./2025-07-24-update-2-baruth-mark.png)
 
-The router now tries to avoid there residential-adjacent roads while creating a route but if they are unavoidable, the router will not attempt to find "fun" roads but try to exit the residential area as quickly as possible.
+The router now tries to avoid these residential-adjacent roads while creating a route but if they are unavoidable, the router will not attempt to find "fun" roads but try to exit the residential area as quickly as possible.
 
 This should reduce routes where the algorithm tried to find fun roads within cities or densely populated areas, like the example below around [Birmingham](https://www.openstreetmap.org/#map=13/52.49057/-1.92012)
 ![Birmingham route](./2025-07-24-update-2-city-loop.png)
@@ -52,15 +50,15 @@ This should reduce routes where the algorithm tried to find fun roads within cit
 
 Military areas are now identified and classified as no-go. No-go areas are excluded from the route generation.
 
-While working on the no-go and military areas I've discovered that the mapping data and reality does not always match. So I've had to include a border zone of a 100m so a road that sits just inside a military zone is not considered no-go. Here is an example that I've ridden and that's allowed to be ridden but technically is within a military zone. The 100m border zone should account for these exceptions.
+While working on the no-go and military areas I've discovered that the mapping data and reality does not always match. So I've had to include a border zone of a 100m so a road that sits just inside a military zone is not considered no-go. Here is an example that I've ridden and that's allowed to be ridden but technically is within a military zone close to the [Adazi military zone](https://www.openstreetmap.org/#map=17/57.110189/24.506357). The 100m border zone should account for these exceptions.
 
 ![Adazi military zone](./2025-07-24-update-2-military.png)
 
-I would love to hear from anyone who might know of other areas that should be considered no-go, please come to this [Reddit thread here](https://www.reddit.com/r/ridiapp/comments/1lj3dql/help_military_areas_and_other_off_limit_areas/) and let me know!
+I would love to hear from anyone who might know of other areas that should be considered no-go, or any other thoughts related to this topic, please come to this [reddit thread here](https://www.reddit.com/r/ridiapp/comments/1l33dql/help_military_areas_and_other_off_limit_areas/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button) and let me know!
 
 ### Fun score calculation
 
-The fun score is calculated by counting the total degrees of direction change per km ridden, excluding junctions. So windy roads will generate a high score but straight roads will calculate a low score and city riding from one traffic light to the next will add nothing to the score.
+The fun score is calculated by counting the total degrees of direction change per km ridden, excluding junctions. So windy roads will generate a high score, straight roads will calculate a low score and city riding from one traffic light to the next will add nothing to the score.
 
 Now the score calculation also includes checks for the chosen rule set. For example, the dual sport rule set favours tracks and unpaved surfaces so a windy unpaved road will generate a higher score than a similarly windy paved road. But a windy unpaved track will generate an even higher score.
 
@@ -72,7 +70,7 @@ The app only surfaces the highest scored routes for different distances so these
 
 Round trip generation got a bit of an overhaul as it had several problems.
 
-It would often use the same road several times leading to confusing routes, like the example below. It is impossible to know how this route is supposed to be ridden and also it would be a bit boring to ride the same roads several times even if in the opposite direction.
+It would sometimes use the same road several times leading to confusing routes, like the example below. It is impossible to know how this route is supposed to be ridden and also it would be a bit boring to ride the same roads several times even if in the opposite direction.
 ![Round trip](./2025-07-24-update-2-round-trip.png)
 This is now changed and it will never attempt to use the same road again.
 
@@ -95,6 +93,8 @@ It's been really fun to work on these improvements and go riding to test the new
 I've set up a [Subreddit](https://www.reddit.com/r/ridiapp/) for getting your feedback and chatting, come and share your experience with [Ridi](https://ridi.bike?utm_source=email&utm_medium=newsletter&utm_campaign=update_2_2025&utm_content=git_cta), good or bad!
 
 You can also reach me on [BlueSky](https://bsky.app/profile/tomsjansons.bsky.social), I love to hear feedback and ideas and suggestions!
+
+I am super excited to hear about all the adventures riders will find with Ridi routes and hope more riders can experience the joy of jumping on their bike and ride!
 
 Have a safe one!
 
