--- a/apps/astro-app/src/content/articles/2025-07-24-update-2.md
+++ b/apps/astro-app/src/content/articles/2025-07-24-update-2.md
@@ -94,7 +94,7 @@ I've set up a [Subreddit](https://www.reddit.com/r/ridiapp/) for getting your fe
 
 You can also reach me on [BlueSky](https://bsky.app/profile/tomsjansons.bsky.social), I love to hear feedback and ideas and suggestions!
 
-I am super excited to hear about all the adventures riders will find with Ridi routes and hope more riders can experience the joy of jumping on their bike and ride!
+I am super excited to hear about all the adventures riders will find with Ridi routes, definitely share your experiences!
 
 Have a safe one!
 
